--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="myName"
+            type="com.example.android.aboutme.MyName" />
+    </data>
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="@dimen/layout_margin"
@@ -14,7 +20,7 @@
         style="@style/NameStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/name"
+        android:text="@={myName.name}"
         tools:layout_editor_absoluteX="23dp"
         tools:layout_editor_absoluteY="48dp" />
 
@@ -43,8 +49,9 @@
         style="@style/NameStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:visibility="gone" />
+
+        android:visibility="gone"
+        android:text="@={myName.nickname}"/>
 
     <ImageView
         android:id="@+id/star_image"
@@ -71,3 +78,4 @@
             android:text="@string/bio" />
     </ScrollView>
 </LinearLayout>
+</layout>
